; ModuleID = '/home/carl/AnghaBench/php-src/ext/gmp/extr_gmp.c_gmp_cast_object.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gmp/extr_gmp.c_gmp_cast_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@SUCCESS = common dso_local global i32 0, align 4
@FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @gmp_cast_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gmp_cast_object(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  switch i32 %9, label %59 [
    i32 129, label %10
    i32 130, label %19
    i32 131, label %29
    i32 128, label %39
  ]

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = call %struct.TYPE_2__* @GET_GMP_OBJECT_FROM_OBJ(i32* %11)
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %8, align 4
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @gmp_strval(i32* %15, i32 %16, i32 10)
  %18 = load i32, i32* @SUCCESS, align 4
  store i32 %18, i32* %4, align 4
  br label %61

19:                                               ; preds = %3
  %20 = load i32*, i32** %5, align 8
  %21 = call %struct.TYPE_2__* @GET_GMP_OBJECT_FROM_OBJ(i32* %20)
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %8, align 4
  %24 = load i32*, i32** %6, align 8
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @mpz_get_si(i32 %25)
  %27 = call i32 @ZVAL_LONG(i32* %24, i32 %26)
  %28 = load i32, i32* @SUCCESS, align 4
  store i32 %28, i32* %4, align 4
  br label %61

29:                                               ; preds = %3
  %30 = load i32*, i32** %5, align 8
  %31 = call %struct.TYPE_2__* @GET_GMP_OBJECT_FROM_OBJ(i32* %30)
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  store i32 %33, i32* %8, align 4
  %34 = load i32*, i32** %6, align 8
  %35 = load i32, i32* %8, align 4
  %36 = call i32 @mpz_get_d(i32 %35)
  %37 = call i32 @ZVAL_DOUBLE(i32* %34, i32 %36)
  %38 = load i32, i32* @SUCCESS, align 4
  store i32 %38, i32* %4, align 4
  br label %61

39:                                               ; preds = %3
  %40 = load i32*, i32** %5, align 8
  %41 = call %struct.TYPE_2__* @GET_GMP_OBJECT_FROM_OBJ(i32* %40)
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  store i32 %43, i32* %8, align 4
  %44 = load i32, i32* %8, align 4
  %45 = call i32 @mpz_fits_slong_p(i32 %44)
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %52

47:                                               ; preds = %39
  %48 = load i32*, i32** %6, align 8
  %49 = load i32, i32* %8, align 4
  %50 = call i32 @mpz_get_si(i32 %49)
  %51 = call i32 @ZVAL_LONG(i32* %48, i32 %50)
  br label %57

52:                                               ; preds = %39
  %53 = load i32*, i32** %6, align 8
  %54 = load i32, i32* %8, align 4
  %55 = call i32 @mpz_get_d(i32 %54)
  %56 = call i32 @ZVAL_DOUBLE(i32* %53, i32 %55)
  br label %57

57:                                               ; preds = %52, %47
  %58 = load i32, i32* @SUCCESS, align 4
  store i32 %58, i32* %4, align 4
  br label %61

59:                                               ; preds = %3
  %60 = load i32, i32* @FAILURE, align 4
  store i32 %60, i32* %4, align 4
  br label %61

61:                                               ; preds = %59, %57, %29, %19, %10
  %62 = load i32, i32* %4, align 4
  ret i32 %62
}

declare dso_local %struct.TYPE_2__* @GET_GMP_OBJECT_FROM_OBJ(i32*) #1

declare dso_local i32 @gmp_strval(i32*, i32, i32) #1

declare dso_local i32 @ZVAL_LONG(i32*, i32) #1

declare dso_local i32 @mpz_get_si(i32) #1

declare dso_local i32 @ZVAL_DOUBLE(i32*, i32) #1

declare dso_local i32 @mpz_get_d(i32) #1

declare dso_local i32 @mpz_fits_slong_p(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
